{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 497,
  "lineage": "48263115-9fa8-a69f-725f-f7f29b6414d8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "windows1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.74.165.239",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-06T16:42:07.723-08:00",
            "id": "projects/norse-decoder-375521/regions/us-east1/addresses/windows1",
            "name": "windows1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "norse-decoder-375521",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/regions/us-east1/addresses/windows1",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/zones/us-east1-c/instances/windows-s1jf"
            ]
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "windows2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.185.85.235",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-06T16:42:08.624-08:00",
            "id": "projects/norse-decoder-375521/regions/us-east1/addresses/windows2",
            "name": "windows2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "norse-decoder-375521",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/regions/us-east1/addresses/windows2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "dbvm",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 0.8,
                "group": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/regions/us-east1/instanceGroups/windows-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "compression_mode": "DISABLED",
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-02-06T16:42:54.163-08:00",
            "enable_cdn": false,
            "fingerprint": "sVumJ2Ozh-Q=",
            "generated_id": -1119084447,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/healthChecks/group-http-lb8-hc-dbvm"
            ],
            "id": "projects/norse-decoder-375521/global/backendServices/group-http-lb8-backend-dbvm",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb8-backend-dbvm",
            "port_name": "http",
            "project": "norse-decoder-375521",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/backendServices/group-http-lb8-backend-dbvm",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_address.windows1",
            "google_compute_address.windows2",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-06T16:42:51.476-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/norse-decoder-375521/global/firewalls/group-http-lb8-hc-0",
            "log_config": [],
            "name": "group-http-lb8-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/networks/default",
            "priority": 1000,
            "project": "norse-decoder-375521",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/firewalls/group-http-lb8-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.windows1",
            "google_compute_address.windows2",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.227.232.107",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-06T16:35:06.724-08:00",
            "id": "projects/norse-decoder-375521/global/addresses/group-http-lb8-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "group-http-lb8-address",
            "prefix_length": 0,
            "project": "norse-decoder-375521",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/addresses/group-http-lb8-address"
          }
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/norse-decoder-375521/global/forwardingRules/group-http-lb8",
            "ip_address": "35.227.232.107",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb8",
            "port_range": "80",
            "project": "norse-decoder-375521",
            "self_link": "https://www.googleapis.com/compute/beta/projects/norse-decoder-375521/global/forwardingRules/group-http-lb8",
            "target": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/targetHttpProxies/group-http-lb8-http-proxy"
          },
          "dependencies": [
            "google_compute_address.windows1",
            "google_compute_address.windows2",
            "module.dynamic_backends.google_compute_backend_service.default",
            "module.dynamic_backends.google_compute_global_address.default",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.dynamic_backends.google_compute_target_http_proxy.default",
            "module.dynamic_backends.google_compute_url_map.default",
            "module.dynamic_backends.google_compute_url_map.https_redirect",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-06T16:43:30.961-08:00",
            "id": "projects/norse-decoder-375521/global/targetHttpProxies/group-http-lb8-http-proxy",
            "name": "group-http-lb8-http-proxy",
            "project": "norse-decoder-375521",
            "proxy_bind": false,
            "proxy_id": -1119084451,
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/targetHttpProxies/group-http-lb8-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/urlMaps/group-http-lb8-url-map"
          },
          "dependencies": [
            "google_compute_address.windows1",
            "google_compute_address.windows2",
            "module.dynamic_backends.google_compute_backend_service.default",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.dynamic_backends.google_compute_url_map.default",
            "module.dynamic_backends.google_compute_url_map.https_redirect",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-06T16:43:18.170-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/backendServices/group-http-lb8-backend-dbvm",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ZdmaSjpc6sc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/norse-decoder-375521/global/urlMaps/group-http-lb8-url-map",
            "map_id": -1119084471,
            "name": "group-http-lb8-url-map",
            "path_matcher": [],
            "project": "norse-decoder-375521",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/urlMaps/group-http-lb8-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.windows1",
            "google_compute_address.windows2",
            "module.dynamic_backends.google_compute_backend_service.default",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-east1/private8",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-06T16:35:40.620-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/norse-decoder-375521/regions/us-east1/subnetworks/private8",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private8",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/networks/main8",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-decoder-375521",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/regions/us-east1/subnetworks/private8",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-east1/public8",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-06T16:35:40.525-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/norse-decoder-375521/regions/us-east1/subnetworks/public8",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public8",
            "network": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/networks/main8",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "norse-decoder-375521",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/regions/us-east1/subnetworks/public8",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/norse-decoder-375521/global/networks/main8",
            "mtu": 0,
            "name": "main8",
            "project": "norse-decoder-375521",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/norse-decoder-375521/global/networks/main8"
          }
        }
      ]
    }
  ]
}